2000-06-25  Bart Schaefer  <schaefer@zsh.org>

	* 12063: Doc/Zsh/builtins.yo, Doc/Zsh/compwid.yo,
	Doc/Zsh/mod_computil.yo, Doc/Zsh/mod_zutil.yo: Fix typos; assorted
	clarification and reformatting.

2000-06-23  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12044: Src/builtin.c:  read -A assigned an unnecessary null
	if there was trailing whitespace; careful of distinction between
	whitespace and non-whitespace field separators.

2000-06-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 12041,12043 : Completion/Core/compinit: even more compinit stuff,
 	change prompt, search for insecure parent dirs
	
2000-06-22  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 12040: Src/builtin.c: typeset -r on existing parameter set
	the readonly flag before assigning any value on the same command
	line.

2000-06-22  Bart Schaefer  <schaefer@zsh.org>

	* 12039: Test/comptest: Use "compinit -u" to avoid a possible
	prompt about security of the directories; point ZDOTDIR into
	the temporary test directory for the .zcompdump file.

2000-06-22  Sven Wischnowsky  <wischnow@zsh.org>

	* 12033: Completion/Core/compinit: followup to compinit-security
 	patch
	
	* 12029: Completion/Builtins/_arrays, Completion/Builtins/_zstyle,
 	Completion/Commands/_bash_completions,
 	Completion/Commands/_history_complete_word,
 	Completion/Core/_history, Completion/Core/_main_complete,
 	Completion/Core/_parameters, Completion/Core/_setup,
 	Completion/Core/_tags, Completion/Debian/_apt,
 	Completion/X/_x_extension, Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo,
 	Src/zsh.h, Src/Zle/compcore.c, Src/Zle/compctl.c,
 	Src/Zle/complist.c, Src/Zle/computil.c: allow subscripts for
 	compadd -[ak]; new style for history completion; better
 	list-colors handling
	
2000-06-22  Clint Adams  <schizo@debian.org>

	* 12027: Completion/User/_mailboxes: fix splitting problem in
	12024, add intelligence for mutt mailboxes in $maildirectory
	not specified in muttrc.
